2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* CD/CD.cs:
	* CD/TOC.cs:
	* CD/PMA.cs:
	* CD/ATIP.cs:
	* CD/Enums.cs:
	* CD/FullTOC.cs:
	* CD/Session.cs:
	* CD/CDTextOnLeadIn.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated CD decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DVD/DVD.cs:
	* DVD/DMI.cs:
	* DVD/DDS.cs:
	* DVD/PFI.cs:
	* DVD/PRI.cs:
	* DVD/RMD.cs:
	* DVD/BCA.cs:
	* DVD/UDI.cs:
	* DVD/AACS.cs:
	* DVD/ADIP.cs:
	* DVD/CPRM.cs:
	* DVD/Spare.cs:
	* DVD/Enums.cs:
	* DVD/Layers.cs:
	* DVD/CSS&CPRM.cs:
	* DVD/Cartridge.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated DVD decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Floppy/ISO.cs:
	* Floppy/Amiga.cs:
	* Floppy/Enums.cs:
	* Floppy/Apple2.cs:
	* Floppy/System34.cs:
	* Floppy/Commodore.cs:
	* Floppy/AppleSony.cs:
	* Floppy/System3740.cs:
	* Floppy/Perpendicular.cs:
	  Rename fields, methods and structs to more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Floppy/ISO.cs:
	* Floppy/Amiga.cs:
	* Floppy/Enums.cs:
	* Floppy/Floppy.cs:
	* Floppy/Apple2.cs:
	* Floppy/System34.cs:
	* Floppy/Commodore.cs:
	* Floppy/AppleSony.cs:
	* Floppy/System3740.cs:
	* Floppy/Perpendicular.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated floppy decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* BD.cs:
	* CD.cs:
	* ATA.cs:
	* MMC.cs:
	* DVD.cs:
	* SCSI.cs:
	* CD/CD.cs:
	* Floppy.cs:
	* ATA/ATA.cs:
	* DVD/DVD.cs:
	* Blu-ray/BD.cs:
	* SCSI/Inquiry.cs:
	* SCSI/MMC/MMC.cs:
	* Floppy/Floppy.cs:
	* DiscImageChef.Decoders.csproj:
	  Organize decoders files&folders

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA.cs:
	  Typo.

	* SCSI.cs:
	  Don't try to decode Version Descriptors if there are none.
	Also there are devices on the wild with less than 8 VDs.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA.cs:
	  Added ATA/ATAPI IDENTIFY DEVICE disk tags.
